# lekiwi_ros2

./: .gitignore  README.md
lekiwi_bringup/: CMakeLists.txt  package.xml
lekiwi_bringup/config/: arm_initial_positions.yaml  bridge.yaml  bridge_camera_alias.yaml  bridge_full.yaml  bridge_spawn.yaml  ekf.yaml  ros2_controllers.full.yaml  ros2_controllers.yaml  twist_mux.yaml
lekiwi_bringup/launch/: sim_base.launch.py  sim_full.launch.py  spawn_object.launch.py  warehouse_sim.launch.py
lekiwi_bringup/models/aruco_cube/: model.config  model.sdf
lekiwi_bringup/models/pick_cube/: model.config  model.sdf
lekiwi_bringup/models/waste_bottle/: model.config  model.sdf
lekiwi_bringup/models/waste_can/: model.config  model.sdf
lekiwi_bringup/models/waste_carton/: model.config  model.sdf
lekiwi_bringup/scripts/: generate_aruco.py  spawn_object.py  teleop_azerty.py
lekiwi_bringup/worlds/: bootcamp.sdf  warehouse.sdf
lekiwi_description/: CMakeLists.txt  package.xml
lekiwi_description/launch/: display.launch.py
lekiwi_description/meshes/base/: SOURCE.md  bno055_imu.stl  lekiwi_base.stl  omni_wheel.stl
lekiwi_description/print/: lidar_bridge.scad  lidar_plate.scad  lidar_standoff.scad  servo_wheel_hub_M5.scad
lekiwi_description/rviz/: lekiwi.rviz
lekiwi_description/urdf/: lekiwi.base.xacro  lekiwi.cameras.xacro  lekiwi.gazebo.xacro  lekiwi.lidar.xacro  lekiwi.ros2_control.xacro  lekiwi.urdf.xacro  lekiwi_manip.urdf.xacro
lekiwi_manipulation/: package.xml  setup.cfg  setup.py
lekiwi_manipulation/config/: pick_poses.yaml
lekiwi_manipulation/launch/: nav_pick_demo.launch.py
lekiwi_manipulation/lekiwi_manipulation/: nav_then_pick.py
lekiwi_manipulation_moveit_config/: CMakeLists.txt  package.xml
lekiwi_manipulation_moveit_config/config/: joint_limits.yaml  lekiwi_manip.srdf  lekiwi_manip.urdf.xacro  moveit_controllers.yaml
lekiwi_manipulation_moveit_config/launch/: demo_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py
lekiwi_navigation/: CMakeLists.txt  package.xml
lekiwi_navigation/config/nav2/: amcl.yaml  map_saver.yaml  nav2.yaml  slam_toolbox.yaml
lekiwi_navigation/launch/: nav2.launch.py  navigation.launch.py  slam.launch.py
lekiwi_navigation/maps/: README.md
lekiwi_navigation/maps/bootcamp/: map.pgm  map.yaml
lekiwi_navigation/rviz/: nav.rviz  slam.rviz
