<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lekiwi_bringup</name>
  <version>0.1.0</version>
  <description>Simulation Gazebo (Ionic) de la base LeKiwi : ros2_control
    (omni_wheel_drive_controller) + ros_gz bridge + teleop — Bootcamp 2026.</description>

  <maintainer email="contact@etienne-schmitz.com">Etienne Schmitz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lekiwi_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>omni_wheel_drive_controller</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- Plateforme de manipulation mobile (sim_full.launch.py) : bras SO-101 + pince -->
  <exec_depend>so101_description</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>parallel_gripper_action_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
