<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lekiwi_manipulation</name>
  <version>0.1.0</version>
  <description>
    Demo de manipulation mobile (S20.3) pour la plateforme LeKiwi + SO-101 :
    orchestration navigation Nav2 -> pick MoveIt, sans perception — Bootcamp 2026.
  </description>
  <maintainer email="contact@etienne-schmitz.com">Etienne Schmitz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>lekiwi_bringup</exec_depend>
  <exec_depend>lekiwi_navigation</exec_depend>
  <exec_depend>lekiwi_manipulation_moveit_config</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
