<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lekiwi_manipulation_moveit_config</name>
  <version>0.1.0</version>
  <description>
    Configuration MoveIt 2 de la plateforme de manipulation mobile LeKiwi + SO-101
    (base omni + bras prefixe arm_, virtual joint planar) — Bootcamp 2026 / S20.
  </description>
  <maintainer email="contact@etienne-schmitz.com">Etienne Schmitz</maintainer>
  <license>MIT</license>

  <author email="contact@etienne-schmitz.com">Etienne Schmitz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lekiwi_description</exec_depend>
  <exec_depend>lekiwi_bringup</exec_depend>
  <exec_depend>so101_description</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
